--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "HazardX",
   "dependencies": {
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
+    "forever-monitor": "^2.0.0",
     "winston": "^3.2.1"
   }
 }
