--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
     "forever-monitor": "^2.0.0",
+    "shush": "^1.0.0",
     "winston": "^3.2.1"
   }
 }
